# gnome-screenshot

./: .cvsignore  .gitattributes  .gitignore  .gitlab-ci.yml  ChangeLog  Makefile.am  NEWS  Please enable issues Tab  README.md  autogen.sh  cheese-flash.c  cheese-flash.h  configure  configure.ac  gnome-egg-xfer-dialog.c  gnome-egg-xfer-dialog.h  gnome-panel-screenshot.c  gnome-panel-screenshot.glade  gnome-panel-screenshot.schemas.in  gnome-screenshot.1  gnome-screenshot.c  gnome-screenshot.desktop.in  gnome-screenshot.doap  gnome-screenshot.glade  gnome-screenshot.h  gnome-screenshot.schemas.in  gnome-screenshot.ui  meson.build  meson_options.txt  org.gnome.Screenshot.json  org.gnome.gnome-screenshot.gschema.xml.in  screenshot-area-selection.c  screenshot-area-selection.h  screenshot-config.c  screenshot-config.h  screenshot-dialog.c  screenshot-dialog.h  screenshot-filename-builder.c  screenshot-interactive-dialog.c  screenshot-save.c  (+7 more)
build-aux/: make_release.sh
data/: gnome-screenshot.1  gnome-screenshot.gresource.xml  meson.build  org.gnome.Screenshot.desktop.in  org.gnome.Screenshot.gresource.xml  org.gnome.Screenshot.metainfo.xml.in  org.gnome.Screenshot.service.in  org.gnome.gnome-screenshot.gschema.xml
data/icons/: meson.build
data/ui/: screenshot-app-menu.ui  screenshot-dialog.ui  screenshot-interactive-dialog.ui  screenshot-interactive.ui
po/: LINGUAS  Makevars  POTFILES.in  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gd.po  (+65 more)
src/: Makefile.am  cheese-flash.c  cheese-flash.h  gnome-screenshot.1  gnome-screenshot.c  gnome-screenshot.convert  gnome-screenshot.desktop.in  gnome-screenshot.gresource.xml  gnome-screenshot.ui  meson.build  org.gnome.Screenshot.appdata.xml.in  org.gnome.Screenshot.desktop.in  org.gnome.Screenshot.metainfo.xml.in  org.gnome.gnome-screenshot.gschema.xml  org.gnome.gnome-screenshot.gschema.xml.in  screenshot-app-menu.ui  screenshot-application.c  screenshot-application.h  screenshot-area-selection.c  screenshot-area-selection.h  screenshot-backend-shell.c  screenshot-backend-shell.h  screenshot-backend-x11.c  screenshot-backend-x11.h  screenshot-backend.c  screenshot-backend.h  screenshot-config.c  screenshot-config.h  screenshot-dialog.c  screenshot-dialog.h  screenshot-dialog.ui  screenshot-filename-builder.c  screenshot-filename-builder.h  screenshot-interactive-dialog.c  screenshot-interactive-dialog.h  screenshot-interactive.ui  screenshot-shadow.c  screenshot-shadow.h  screenshot-utils.c  screenshot-utils.h
